--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.camunda.fox.cycle</groupId>
   <artifactId>cycle-root</artifactId>
-  <version>6.3.0-SNAPSHOT</version>
+  <version>7.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>fox cycle - root</name>
   
@@ -163,11 +163,10 @@
   </build>
   
   <repositories>
-    <!-- DO NOT REMOVE, otherwise no snapshots are downloaded via nexus! -->
     <repository>
-      <id>camunda-fox-ee</id>
-      <name>camunda-fox-ee</name>
-      <url>myDummyRepoForSnapshotAccess</url>
+      <id>camunda-bpm-nexus</id>
+      <name>camunda-bpm-nexus</name>
+      <url>https://app.camunda.com/nexus/content/groups/public</url>
     </repository>
   </repositories>
 </project>
