refactor(all): maven coordinates & folder rename
- maven artifact naming scheme

org.camunda.bpm is base (longest common groupId prefix)
org.camunda.bpm:camunda-engine* (engine modules: nil, -cdi,-spring,-osgi,-rest)

org.camunda.bpm.javaee:camunda-ejb-* (ejb modules: service, client)
org.camunda.bpm.javaee:camunda-jobexecutor-* (Java EE jobexecutor modules)

org.camunda.bpm.cycle:* (Cycle modules)
org.camunda.bpm.tasklist:camunda-tasklist (Tasklist)
org.camunda.bpm.cockpit:camunda-cockpit (Cockpit)

org.camunda.bpm.jboss:* (All Jboss mudules)
org.camunda.bpm.tomcat:* (All Tomcat mudules)
org.camunda.bpm.glassfish:* (All Glassfish mudules)
org.camunda.bpm.websphere:* (All Websphere mudules)

org.camunda.bpm.qa:* (all qa modules)

org.camunda.bpm.distro:camunda-sql-scripts
org.camunda.bpm.distro:camunda-h2-webapp

related to CAM-100

jboss subsystem
urn:com.camunda.fox.fox-platform:1.1 => urn:org.camunda.bpm.jboss:1.1

--- a/cycle-httpclient/pom.xml
+++ b/cycle-httpclient/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>cycle-root</artifactId>
-    <groupId>com.camunda.fox.cycle</groupId>
+    <artifactId>camunda-cycle-root</artifactId>
+    <groupId>org.camunda.bpm.cycle</groupId>
     <version>7.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>cycle-httpclient</artifactId>
+  <artifactId>camunda-cycle-httpclient</artifactId>
   <packaging>jar</packaging>
-  <name>fox cycle - httpclient</name>
+  <name>camunda BPM - cycle - httpclient</name>
   
   <dependencies>
     <dependency>
