--- a/cycle/src/test/resources/config/test.properties
+++ b/cycle/src/test/resources/config/test.properties
@@ -1,14 +1,8 @@
 # local test signavio
-test.signavioConnector.globalUser=test@camunda.com
-test.signavioConnector.globalPassword=testtest
-test.signavioConnector.baseUrl=http://vm2.camunda.com:8080
+test.signavioConnector.globalUser=${signavio.connector.globalUser}
+test.signavioConnector.globalPassword=${signavioConnector.globalPassword}
+test.signavioConnector.baseUrl=${signavioConnector.baseUrl}
 # proxy settings
-test.signavioConnector.proxyUrl=http://vm2.camunda.com:3128
+test.signavioConnector.proxyUrl=${signavioConnector.proxyUrl}
 #test.signavioConnector.proxyUsername=
 #test.signavioConnector.proxyPassword=
-
-
-# signavio saas
-#test.signavioConnector.globalUser=training@camunda.com
-#test.signavioConnector.globalPassword=cam123
-#test.signavioConnector.baseUrl=https://editor.signavio.com/
