--- a/cycle-glassfish/pom.xml
+++ b/cycle-glassfish/pom.xml
@@ -1,19 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.camunda.fox.cycle</groupId>
-    <artifactId>cycle-root</artifactId>
+    <groupId>org.camunda.bpm.cycle</groupId>
+    <artifactId>camunda-cycle-root</artifactId>
     <version>7.0.0-SNAPSHOT</version>
   </parent>
   
-  <artifactId>cycle-glassfish</artifactId>
+  <artifactId>camunda-cycle-glassfish</artifactId>
   <packaging>war</packaging>
-  <name>fox cycle - Glassfish</name>
+  <name>camunda BPM - cycle - Glassfish</name>
   
   <dependencies>
     <dependency>
-      <groupId>com.camunda.fox.cycle</groupId>
-      <artifactId>cycle</artifactId>
+      <groupId>org.camunda.bpm.cycle</groupId>
+      <artifactId>camunda-cycle</artifactId>
       <version>${project.version}</version>
       <type>war</type>
       <scope>runtime</scope>
