--- a/cycle-sql/pom.xml
+++ b/cycle-sql/pom.xml
@@ -1,18 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>cycle-root</artifactId>
-    <groupId>com.camunda.fox.cycle</groupId>
+    <artifactId>camunda-cycle-root</artifactId>
+    <groupId>org.camunda.bpm.cycle</groupId>
     <version>7.0.0-SNAPSHOT</version>
   </parent>
   
-  <artifactId>cycle-sql-scripts</artifactId>
-  <name>fox cycle - SQL scripts</name>
+  <artifactId>camunda-cycle-sql-scripts</artifactId>
+  <name>camunda BPM - cycle - SQL scripts</name>
   
   <dependencies>
     <dependency>
-      <groupId>com.camunda.fox.cycle</groupId>
-      <artifactId>cycle</artifactId>
+      <groupId>org.camunda.bpm.cycle</groupId>
+      <artifactId>camunda-cycle</artifactId>
       <classifier>core</classifier>
       <version>${project.version}</version>
     </dependency>
