--- a/cycle-tomcat/pom.xml
+++ b/cycle-tomcat/pom.xml
@@ -1,14 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.camunda.fox.cycle</groupId>
-    <artifactId>cycle-root</artifactId>
+    <groupId>org.camunda.bpm.cycle</groupId>
+    <artifactId>camunda-cycle-root</artifactId>
     <version>7.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>cycle-tomcat</artifactId>
+  <artifactId>camunda-cycle-tomcat</artifactId>
   <packaging>war</packaging>
-  <name>fox cycle - Tomcat</name>
+  <name>camunda BPM - cycle - Tomcat</name>
 
   <properties>
     <jboss.el.version>2.0.0.GA</jboss.el.version>
@@ -17,8 +17,8 @@
   <dependencies>
   
     <dependency>
-      <groupId>com.camunda.fox.cycle</groupId>
-      <artifactId>cycle</artifactId>
+      <groupId>org.camunda.bpm.cycle</groupId>
+      <artifactId>camunda-cycle</artifactId>
       <version>${project.version}</version>
       <type>war</type>
       <scope>runtime</scope>
@@ -134,8 +134,8 @@
           </webResources>
           <overlays>
             <overlay>
-              <groupId>com.camunda.fox.cycle</groupId>
-              <artifactId>cycle</artifactId>
+              <groupId>org.camunda.bpm.cycle</groupId>
+              <artifactId>camunda-cycle</artifactId>
               <excludes>
                 <exclude>**/cycle-persistence.xml</exclude>
               </excludes>
