--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <groupId>org.camunda.bpm</groupId>
     <artifactId>camunda-root</artifactId>
     <version>7.0.0-SNAPSHOT</version>
+    <relativePath>../..</relativePath>
   </parent>
   
   <properties>
