refactor(cycle): add log statements
Adding log statements to be able to see what it is going wrong in
cycle-tests.

related to CAM-109

--- a/cycle/pom.xml
+++ b/cycle/pom.xml
@@ -372,6 +372,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <runOrder>alphabetical</runOrder>
           <excludes>
             <!-- skip signavio connector test in default profile -->
             <exclude>**/SignavioConnectorTest.java</exclude>
