--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.camunda.bpm</groupId>
     <artifactId>camunda-root</artifactId>
-    <version>7.0.0-SNAPSHOT</version>
+    <version>7.0.0-alpha1</version>
     <relativePath>../..</relativePath>
   </parent>
   
