--- a/cycle-jboss/pom.xml
+++ b/cycle-jboss/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.camunda.bpm.cycle</groupId>
     <artifactId>camunda-cycle-root</artifactId>
-    <version>7.0.0-alpha1</version>
+    <version>7.0.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>camunda-cycle-jboss</artifactId>
