--- a/cycle/pom.xml
+++ b/cycle/pom.xml
@@ -271,7 +271,20 @@
         </exclusion>
       </exclusions>
     </dependency>
-      
+
+    <!-- required for Git-Connector -->
+    <dependency>
+      <groupId>org.eclipse.jgit</groupId>
+      <artifactId>org.eclipse.jgit</artifactId>
+      <version>3.1.0.201310021548-r</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>1.4.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -488,6 +501,11 @@
           <groupId>javax.mail</groupId>
           <artifactId>mail</artifactId>
           <scope>compile</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.tomcat</groupId>
+          <artifactId>tomcat-jdbc</artifactId>
+          <version>7.0.50</version>
         </dependency>
       </dependencies>
       <build>
